# test-org-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: main.py  manage.py  pyproject.toml
backend/dev_project/: settings.py  urls.py  wsgi.py
backend/org_app/: __init__.py  apps.py  models.py  serializers.py
backend/org_app/fixtures/: seed.json
backend/org_app/migrations/: 0001_initial.py  0002_alter_contract_id_alter_organization_id.py
backend/org_app/services/: auth_client.py  provider_client.py  subscription_client.py
backend/org_app/urls/: __init__.py  admin.py  api.py  third.py
backend/org_app/views/: admin.py  api.py  third.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  api.js  index.js  styles.css
frontend/src/pages/: ContractDetailPage.jsx  ContractsPage.jsx  OrganizationPage.jsx  ProvidersPage.jsx
